overflow fixed on desktop

--- a/src/components/ShadowTitle.module.css
+++ b/src/components/ShadowTitle.module.css
@@ -29,7 +29,6 @@
     user-select: none;
     white-space: nowrap;
     z-index: -1;
-    overflow-x: hidden;
 }
 
 @media only screen and (max-width: 740px) {
@@ -40,5 +39,7 @@
         width: 100vw;
         margin-left: 50%;
         transform: translateX(-50%);
+        overflow-x: hidden;
+        overflow-y: visible;
     }
   }
